[metadata]
name = your_project_name
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A short description of your project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/your_project_name
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
